# sleepclock

./: .gitignore  CLAUDE.md  README.md  sdkconfig  sdkconfig.old
.cache/clangd/index/: AnimatedGIF.h.3D6999D507FF93A3.idx  EVE_commands.c.B138804603FFC678.idx  EVE_supplemental.c.7AD6C302951A863C.idx  actions.h.2248AD0E898CFC7D.idx  animimg001.c.093FBEA5DA27F2C8.idx  animimg002.c.4B3E0BDB9E52DD48.idx  animimg003.c.F1B5B701CC5229A5.idx  btn_handler.c.2292E6E896FEA574.idx  btn_handler.h.3DAE73CDD0819F5B.idx  chromatic.c.072F39C1E9FBB995.idx  code128.c.B7BDF102A83F9D57.idx  decomp_raw.c.77AB50A163420EF1.idx  egl.c.F5424A2637C56BC8.idx  fonts.h.E8670F2B97DB5187.idx  frogfs.c.EDA99650F991EFA5.idx  frogfs.h.14748C62BC896B67.idx  frogfs_format.h.71EAE96DC7104564.idx  frogfs_priv.h.396EA57B4F22CC1C.idx  frogfs_types.h.4502E8C68F58A509.idx  gif.c.BA53DB0515503A50.idx  gles2.c.E084A8329D7F3DFD.idx  images.c.D93766FCA67A9189.idx  images.h.721D3E93656FEAB7.idx  img_bulb_gif.c.D1D15452149D58DA.idx  img_caret_down.c.B45B1CFE032C3643.idx  img_cogwheel_argb.c.630B378A6E8F2D02.idx  img_cogwheel_indexed16.c.47D55D173D83F316.idx  img_cogwheel_rgb.c.F444F8207F5210F1.idx  (+1232 more)
docs/: PRD.md  simulator.html
main/: CMakeLists.txt  btn_handler.c  btn_handler.h  idf_component.yml  lvgl_adapter.c  lvgl_adapter.h  main.c  screen_mgr.c  screen_mgr.h  ssd1322_driver.c  ssd1322_driver.h  star_field.c  star_field.h  ui.h  ui_wrapper.c  weather_chart.c  weather_chart.h  weather_service.c  weather_service.h  wifi_connect.c  wifi_connect.h
main/ui/: images.c  images.h  screens.c  ui_image_sunning.c
